log/build_2024-12-01_20-29-50/turtle_demo_controller/stderr.log
  File "/home/thedush/ROS2_turtlesim_PID_demo/install/turtle_demo_controller/lib/python3.10/site-packages/turtle_demo_controller/turtle_controller_with_pid_implimentation.py", line 115
    if a_v == 0.0 and l_v == 0.0;
                                ^
SyntaxError: invalid syntax

